img gap fix, column change

--- a/styles.css
+++ b/styles.css
@@ -39,11 +39,7 @@
     justify-content: space-between;
     align-items: center;
   }
-.social,
-.logo,
-.subscribe {
-  border: 1px solid #5995DA;
-}
+
 .photo-grid-container {
   display: flex;
   justify-content: center;
@@ -54,6 +50,8 @@
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
+  flex-direction: column;
+  align-items: center;
 }
 
 .photo-grid-item {
